--- a/conf/application.conf
+++ b/conf/application.conf
@@ -69,15 +69,5 @@ logger.play=INFO
 # Logger provided to your application:
 logger.application=DEBUG
 
-play {
-  akka {
-    actor {
-      default-dispatcher = {
-        fork-join-executor {
-          parallelism-factor = 1.0
-          parallelism-max = 200
-        }
-      }
-    }
-  }
-}
+akka.default-dispatcher.fork-join-executor.pool-size-max = 64
+akka.actor.debug.receive = on
