Switch to places instead of bars

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -48,13 +48,9 @@ db.default.url="jdbc:h2:crawl"
 
 city="chicago,il"
 
-yelp.consumerKey="y32Uo14UCHl_byAlvtmfOA"
-yelp.consumerSecret="8nXjUsZAeGi8Qssr5WAvsnknOAo"
-yelp.token="tnImcuU6jgtxVqoHGA4qZ4A7lbJ_hpgy"
-yelp.tokenSecret="Z5s5M19euF6axORpKS1T3lVSRWc"
-
 foursquare.clientId="USOKO214RFQR1VFC1LYFSBGDFKRDER2LCJ4VJE4KO0EKYZEG"
 foursquare.clientSecret="OK4SFFAKFE03ZTGBHP4HWR01GR5X4R3GTYSZVB0FATNKVHMP"
+foursquare.placeType=bar
 
 # Logger
 # ~~~~~
